# 2DeNgine

./: .gitignore  .gitmodules  2DeNgine.sln  2DeNgine.vcxproj  2DeNgine.vcxproj.filters  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ccpp.yml
dependencies/: CMakeLists.txt
dependencies/easyloggingpp/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glfw/: CMakeLists.txt
dependencies/tinyxml2/: CMakeLists.txt
src/: Engine.cpp  Engine.hpp
src/core/memory/: oneFrameAlloc.c  oneFrameAlloc.h
src/gamebasis/: ActorFactory.cpp  ActorFactory.hpp  ComponentManager.hpp  ComponentManagerFactory.hpp  Scene.hpp  SceneFactory.cpp  SceneFactory.hpp  SceneLoader.hpp  TransformComponentManager.cpp  TransformComponentManager.hpp
src/math/: linearmath.h  prng.c  prng.h  vec4.h
src/memory/: linearAlloc.c  linearAlloc.h  memutils.h  poolAlloc.c  poolAlloc.h  stackAlloc.c  stackAlloc.h
src/render/: RenderManager.cpp  RenderManager.hpp  SpriteBatch.cpp  SpriteBatch.hpp  SpriteComponent.cpp  SpriteComponent.hpp  WindowManager.cpp  WindowManager.hpp
src/resource/: DirectoryFilesystem.cpp  DirectoryFilesystem.hpp  GenericHandleData.hpp  ResourceManager.cpp  ResourceManager.hpp  ShaderResourceLoader.cpp  ShaderResourceLoader.hpp  XMLResourceLoader.hpp
src/utils/: HashedString.hpp  LRUCache.hpp  XMLUtils.hpp  hash.h  wildcard.hpp
tests/: CMakeLists.txt  HashTests.cpp  HashedStringTest.cpp  LRUCacheTest.cpp
